--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -3,7 +3,7 @@ server:
     port: 7000
 spring:
     datasource:
-        url: jdbc:mysql://localhost/loans?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+        url: jdbc:mysql://mysqldb/loans?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 
         password: 'root'
         username: 'root'
