--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     application:
         name: loans
     config:
-        import: optional:configserver:http://configserver:8070/
+        import: optional:configserver:http://localhost:8070/
